# casekit

./: .env.example  .gitignore  CaseKit.bat  INTEGRATION_PLAN.md  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
src/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/src-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
src/src-frontend/src/: App.tsx
src/src-frontend/src/__tests__/: aiReview.test.ts  chronologySort.test.ts  citationExtractor.test.ts  setup.ts  useCase.test.ts
src/src-frontend/src/components/ai/: AiReviewPanel.tsx  ApiKeySetup.tsx  RedactionTool.tsx
src/src-frontend/src/components/case/: CaseOverview.tsx  HomePage.tsx
src/src-frontend/src/components/chronology/: ChronologyView.tsx
src/src-frontend/src/components/common/: Disclaimer.tsx  ReferralPanel.tsx  SetupCheck.tsx
src/src-frontend/src/components/documents/: DocumentLibrary.tsx
src/src-frontend/src/hooks/: useCase.ts
src/src-frontend/src/lib/: citationExtractor.ts  tauri-commands.ts
src/src-frontend/src/styles/: globals.css
src/src-frontend/src/types/: ai.ts  case.ts  citation.ts  document.ts
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/src/: date_scanner.rs  extraction.rs  lib.rs  main.rs  ocr.rs  path_safety.rs
src/src-tauri/src/commands/: ai_history.rs  case.rs  chronology.rs  citation.rs  documents.rs  export.rs  filesystem.rs  mod.rs  system.rs
src/src-tauri/src/models/: case.rs  chronology.rs  document.rs  mod.rs
(+18 files in other folders)
