[package]
name = "casekit"
version = "0.1.0"
description = "Civil dispute toolkit for England & Wales"
authors = ["anonlegalquant"]
edition = "2021"

[lib]
name = "casekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
dirs = "6"
regex = "1"
pdf-extract = "0.7"
mail-parser = "0.9"
docx-rs = "0.4"
lopdf = "0.34"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
